objects/maps__TPDataSet__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__LastError__c</fullName>
        <description>Additional detail to help explain the latest error</description>
        <label>Last Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SharingAccessLevel__c</fullName>
        <label>Sharing Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Commenter</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory Planning Data Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>